@@ -3,17 +3,12 @@ Hash: SHA1
 
 DIST drizzle-0.4.2.tgz 24106 RMD160 e173cf99700bd10bf5e43388e73913d37b545fbb SHA1 d04a3a0bddb3884f5405c2f8d8b5fb9945389864 SHA256 5e9abd5200d840249003112e7d658eda06e2591e4c6bcf1c97194b4e274f0c66
 EBUILD pecl-drizzle-0.4.2-r1.ebuild 539 RMD160 ac9fc013b689dea1d1cd05c8dd26dbc4b827fa2e SHA1 332a3ea84b6113fc0403e813d69ee2d7e9e2c099 SHA256 7ca2285253ef4c88a7b2dbb8ec96898ec1738437b37456f2027e0aa9bbe87057
-EBUILD pecl-drizzle-0.4.2.ebuild 550 RMD160 0d823dba18891034f9c4725d61923d31dd9d29c5 SHA1 0fab00d8f037e4eb36bf323168c3d79a77615cdc SHA256 ecfd1024802a31482abb44aae61d99ef3b9d84b16d4b41b1ed2c8c6f8ffa641d
-MISC ChangeLog 924 RMD160 99e6332f512f50908db22b59ec116e710c8290d0 SHA1 4e05f7d5c0c9cc9052767667a17c6b1dcba761eb SHA256 cbf6c6c34002cb4da1a3d070812c7b4271763e515f7daae342e04a1fd30bd361
+MISC ChangeLog 1067 RMD160 9201c93d602967fefd4fbad8c3d47fb3731d8291 SHA1 42128c0791e8406eb34d4b0c9a14f3406d25cecc SHA256 332d5adea381302bbf7a0e23a2ea21a6383959970317ce7542e46351e8134fae
 MISC metadata.xml 379 RMD160 c52401e8ef97f2f404d4f173421aeb939c98a88b SHA1 090ad212930388a2ff9c8261af807546b24f73df SHA256 50e6772c4e7b84ef6b1e17bc6e43667e9f0fa740616f80c933b19348a21785e5
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBAgAGBQJN61YlAAoJEGurSuXEqSv17CUIALvjM2DO9Rr06niCqQZcONUl
-6pydr/2qSUnnkPriv/w9viJSRf83rwmW9babYnjT6+9GCc3xAQL8E4lYvbWle3uY
-mgLo9bzXT7AdduE17P2PBONnAntXxfRyPdVQmDP1MwFLnknu74S4ylU0UsjkL03M
-H+QUHXdudhqPizZTnO1LP+PkFODdzxi9+YrdGbozo6O3d4OXGyIBzctQL0lAJwMG
-R9PYX61Q1OnrU1yt8SYVXU1RkwuXoSkViet6mibWS/PnBN1V93+KmNvtPL6kx6gh
-wy/ndSsHrsUcY62/2YZvbug59hSr2EE33pNNUAr0JI5NeLd5lQQuWr1jzEfmwqE=
-=O7Jz
+iEYEARECAAYFAk5gsSsACgkQHB6c3gNBRYc6HwCeOyLXr9eym/B3Y7Tz2NB4FQHd
+ecUAniGcGsWJXu6MkPbZQ9zEsZwZl+E9
+=UxF9
 -----END PGP SIGNATURE-----
