@@ -1,6 +1,10 @@
 # ChangeLog for dev-php5/pecl-drizzle
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-drizzle/Attic/ChangeLog,v 1.4 2011/06/05 10:11:34 olemarkus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-drizzle/Attic/ChangeLog,v 1.5 2011/09/02 10:32:49 scarabeus Exp $
+
+  02 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org>
+  -pecl-drizzle-0.4.2.ebuild:
+  Remove the last package depending on old php eclasses.
 
 *pecl-drizzle-0.4.2-r1 (05 Jun 2011)
 
